examples/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    k8s-app: traefik-ingress-lb
